Added a sample TestFX unit test